--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,17 @@
 
 <body>
     <h1>Hola</h1>
-    <img scr="/static/flasklogo.png">
+    <img src="/static/images.jpg">
     <p>{{message}}</p>
+    <h2>Flash Cards</h2>
+    <ul>
+        {% for card in cards %}
+            <li>
+                <a href="{{ url_for('card_view', index=loop.index0) }}">
+                    {{card.question}}
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
