--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,8 @@
                   <li class="nav-item {{ 'active' if active_page == 'home' else ''}}">
                     <a class="nav-link" href="{{url_for('home')}}">Home</a>
                   </li>
-                  <li class="nav-item {{ 'active' if active_page == 'add_card' else ''}}">
-                    <a class="nav-link" href="{{url_for('add_card')}}">Add card </a>
+                  <li class="nav-item {{ 'active' if active_page == 'new_item' else ''}}">
+                    <a class="nav-link" href="{{url_for('new_item')}}">New item </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Pricing</a>
