--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -13,7 +13,10 @@
                 <label>Title</label>
                 <input class="form-control" type="text" name="title">
              </div>
-
+             <div class="form-group">
+                <label>Price</label>
+                <input class="form-control" type="text" name="price">
+             </div>
             <div class="form-group">
                 <label>Description</label>
                 <textarea class="form-control" name="description" rows="3"></textarea>
