--- a/templates/base.html
+++ b/templates/base.html
@@ -40,8 +40,21 @@
         </div>
     </nav>
     <div class="container">
-        {% block content %}
-        {% endblock %}
+      {% with messages = get_flashed_messages(with_categories=True) %}
+        {% if messages %}
+          {% for type, content in messages %}
+          <div class="alert alert-{{ type }} alert-dismissble fade show my-4" role="alert">
+            <button type="button" class="close" data-dismiss="alert">
+              <span arria-hidden="true">&times;</span>
+            </button>
+            {{ content }}
+
+          </div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
+      {% block content %}
+      {% endblock %}
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
