--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -9,19 +9,20 @@
     <div class="col-lg-7 offset-lg-2 my-5">
         <h1>Add new item</h1>
         <form method="POST" action="{{url_for('new_item')}}">
+            {{ form.hidden_tag() }}
             <div class="form-group">
-                <label>Title</label>
-                <input class="form-control" type="text" name="title">
+                {{ form.title.label }}
+                {{ form.title(class="form-control") }}
              </div>
              <div class="form-group">
-                <label>Price</label>
-                <input class="form-control" type="text" name="price">
+                {{ form.price.label }}
+                {{ form.price(class="form-control") }}
              </div>
             <div class="form-group">
-                <label>Description</label>
-                <textarea class="form-control" name="description" rows="3"></textarea>
+                {{ form.description.label }}
+                {{ form.description(class="form-control", rows="3") }}
             <hr>
-            <input class="btn btn-primary form-control" type="submit" value="Submit">
+            {{ form.submit(class="btn btn-primary form-control")}}
         </form>
     </div>
 </div>
